# Learning_material_projectQT

./: README.md
Exampe_PythonBindingCpp/: CMakeLists.txt
Example_CppCallPython/: CMakeLists.txt  main.cpp
Project1/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  pycall.h  pycall_so.cpp
Project1/Debug/: Project1.dll.recipe  Project1.exp  Project1.ilk  Project1.lib  Project1.vcxproj.FileListAbsolute.txt  test.py  vc142.idb
Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  Project1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project1/x64/Debug/: Project1.dll.recipe  Project1.exp  Project1.ilk  Project1.lib  Project1.vcxproj.FileListAbsolute.txt  vc142.idb
Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  Project1.write.1u.tlog  (+3 more)
QT_learning_reference/PyQT_serial/: qt_serial.py
boostpython_example/: CMakeLists.txt  library.cpp  library.h
project_pythonbinding/: hello.cpp  project_pythonbinding.sln  project_pythonbinding.vcxproj
project_pythonbinding/Debug/: vc142.idb
project_pythonbinding/Debug/project_.869df326.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  project_pythonbinding.lastbuildstate
project_pythonbinding/x64/Debug/: vc142.idb
pythonbinding/: CMakeLists.txt  hello.cpp
pythonbindings_ctype_example1/Dll2/: .editorconfig  Dll2.sln  Dll2.vcxproj  dllmain.cpp  pch.h
pythonbindings_ctype_example1/PythonApplication1/: PythonApplication1.pyproj  PythonApplication1.sln
(+19 files in other folders)
